--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </div>
         <div class="about-content">
           <div class="image">
-            <img src="assets/images/portfolio3.png" alt="" />
+            <img src="assets/images/about.png" alt="" />
           </div>
           <div class="text">
             <p>
